--- a/smartequip/pom.xml
+++ b/smartequip/pom.xml
@@ -48,6 +48,13 @@
 			<version>4.8.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-inline</artifactId>
+		    <version>4.8.0</version>
+		    <scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
