--- a/smartequip/src/main/resources/application.properties
+++ b/smartequip/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port = 9090
 spring.application.name = smartequip
+
+#min 2 digit and max can be decided by max properties.
+#This no of digit use in question to get sum of numbers as answer
+digit.max=2
